--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,80 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
-
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/back"
     android:layout_width="match_parent"
-    android:orientation="vertical"
-    android:weightSum="40"
     android:layout_height="match_parent"
-    tools:context="com.thirio.android.Activities.MainActivity">
+    android:background="@color/colorBackground"
+    android:clipChildren="false">
 
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="10"
-        android:padding="16dp"
-        android:background="@color/colorPrimaryDark">
+    <android.support.v4.view.ViewPager
+        android:id="@+id/viewPager"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
+        android:clipChildren="false"
+        android:overScrollMode="never"
+        android:visibility="visible" />
 
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:textSize="34sp"
-            android:textStyle="bold"
-
-            android:gravity="center_vertical|right"
-            android:text="FOND" />
-
-    </LinearLayout>
-
-
-    <LinearLayout
-        android:padding="16dp"
-        android:background="@color/colorPrimary"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="10">
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:gravity="center_vertical"
-            android:textSize="34sp"
-            android:textStyle="bold"
-            android:text="FOOD"/>
-
-    </LinearLayout>
-
-    <LinearLayout
-        android:padding="16dp"
-        android:background="@color/colorAccent"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="10">
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:gravity="center_vertical|right"
-            android:textSize="34sp"
-            android:textStyle="bold"
-            android:text="FITNESS"/>
-
-    </LinearLayout>
-
-    <LinearLayout
-        android:id="@+id/thirio"
-        android:padding="16dp"
-        android:background="@color/colorAdditional"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="10">
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:gravity="center_vertical"
-            android:textSize="34sp"
-            android:textStyle="bold"
-            android:text="THIRIO"/>
-
-    </LinearLayout>
-</LinearLayout>
+</RelativeLayout>
