--- a/app/src/main/res/layout/fragment_front.xml
+++ b/app/src/main/res/layout/fragment_front.xml
@@ -1,8 +1,8 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
                 xmlns:tools="http://schemas.android.com/tools"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                xmlns:app="http://schemas.android.com/apk/res-auto"
                 tools:context=".fragments.FragmentTop">
 
 
@@ -21,11 +21,12 @@
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="10dp"
-        tools:text="Seychelles"
-        android:textSize="18sp"
-        app:typeface="roboto_thin"
         android:textAllCaps="true"
-        android:textColor="@android:color/white" />
+        android:textColor="@android:color/white"
+        android:textSize="18sp"
+        android:visibility="gone"
+        app:typeface="roboto_thin"
+        tools:text="Seychelles" />
 
     <View
         android:layout_width="match_parent"
@@ -47,13 +48,15 @@
             android:layout_weight="1"
             android:gravity="center"
             android:text="NORTH LAT 36"
-            app:typeface="roboto_medium"
-            android:textColor="@android:color/white" />
+            android:textColor="@android:color/white"
+            android:visibility="gone"
+            app:typeface="roboto_medium" />
 
         <ImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:src="@drawable/circle" />
+            android:src="@drawable/circle"
+            android:visibility="gone" />
 
         <com.devspark.robototextview.widget.RobotoTextView
             android:layout_width="match_parent"
@@ -62,7 +65,8 @@
             android:layout_weight="1"
             android:gravity="center"
             android:text="EAST LNG 97"
-            app:typeface="roboto_medium"
-            android:textColor="@android:color/white" />
+            android:textColor="@android:color/white"
+            android:visibility="gone"
+            app:typeface="roboto_medium" />
     </LinearLayout>
 </RelativeLayout>
