--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -41,7 +41,7 @@
         <!--<item name="textColor">#000</item>-->
         <!--<item name="textColorPrimary">#000</item>-->
         <item name="android:textColor">@color/colorPrimary</item>
-        <item name="android:fontFamily">@font/helvetica</item>
+        <!--<item name="android:fontFamily">@font/helvetica</item>-->
     </style>
     <style name="MyCustomTabLayout" parent="Widget.Design.TabLayout">
         <item name="tabBackground">@drawable/tab_bg</item>
@@ -57,5 +57,19 @@
         <item name="colorPrimary">#fff</item>
         <!--<item name="actionOverflowButtonStyle">@style/ActionButtonOverflowStyle</item>-->
         <!--<item name="drawerArrowStyle">@style/DrawerArrowStyle</item>-->
+    </style>
+
+    <!-- Base application theme. -->
+    <!--<style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">-->
+    <!--&lt;!&ndash; Customize your theme here. &ndash;&gt;-->
+    <!--<item name="colorPrimary">@color/colorPrimary</item>-->
+    <!--<item name="colorPrimaryDark">@color/colorPrimaryDark</item>-->
+    <!--<item name="colorAccent">@color/colorAccent</item>-->
+    <!--</style>-->
+    <style name="Theme.AppCompat.Light.NoActionBar.FullScreen" parent="@style/Theme.AppCompat.Light">
+        <item name="windowNoTitle">true</item>
+        <item name="windowActionBar">false</item>
+        <item name="android:windowFullscreen">true</item>
+        <item name="android:windowContentOverlay">@null</item>
     </style>
 </resources>
