--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -25,32 +25,28 @@
 
     </android.support.design.widget.AppBarLayout>
 
-    <android.support.v4.view.ViewPager
-        android:id="@+id/viewPager"
-
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
-        android:clipChildren="false"
-        android:overScrollMode="never"
-        android:visibility="visible" />
-
-    <RelativeLayout
-        android:id="@+id/viewPagerIndicator"
+    <FrameLayout
+        android:id="@+id/rootLayout"
         android:layout_width="match_parent"
-        android:layout_height="55dp"
+        android:layout_height="match_parent"
+        android:layout_above="@+id/bottom_navigation"
+        android:layout_marginTop="?attr/actionBarSize"
+        android:orientation="vertical">
+
+    </FrameLayout>
+
+    <android.support.design.widget.BottomNavigationView
+        android:id="@+id/bottom_navigation"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        android:layout_marginTop="5dp"
-        android:gravity="center">
+        android:background="@color/colorPrimary"
+        app:itemBackground="@drawable/bottomnav_individual"
+        app:menu="@menu/bottom_navigation" />
 
-        <LinearLayout
-            android:id="@+id/viewPagerCountDots"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_centerHorizontal="true"
-            android:gravity="center"
-            android:orientation="horizontal" />
+    <!--<fragment android:name="com.thirio.android.HomeFragment"-->
+    <!--android:id="@+id/headlines_fragment"-->
 
-
-    </RelativeLayout>
+    <!--android:layout_width="match_parent"-->
+    <!--android:layout_height="match_parent" />-->
 </RelativeLayout>
