--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -48,7 +48,7 @@
         <item name="android:colorBackground">@color/colorPrimary</item>
         <item name="android:textColor">#000</item>
     </style>
-     ToolBar
+    <!--ToolBar-->
     <style name="ToolBarStyle" parent="Theme.AppCompat">
         <item name="android:textColorPrimary">@color/colorPrimaryDark</item>
         <item name="android:textColorSecondary">@android:color/black</item>
@@ -71,5 +71,15 @@
         <item name="windowActionBar">false</item>
         <item name="android:windowFullscreen">true</item>
         <item name="android:windowContentOverlay">@null</item>
+    </style>
+
+
+    <style name="BottomNavigation">
+        <item name="android:background">@color/colorPrimary</item>
+        <item name="itemBackground">@drawable/bottomnav_individual</item>
+        <!--<item name="itemIconTint">@</item>-->
+        <!--<item name="itemTextColor">@color/colorAdditional  </item>-->
+        <item name="paddingStart">16dp</item>
+        <item name="paddingEnd">16dp</item>
     </style>
 </resources>
