--- a/app/src/main/res/layout/activity_bmi.xml
+++ b/app/src/main/res/layout/activity_bmi.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/activity_bmi"
     android:layout_width="match_parent"
@@ -27,8 +27,9 @@
 
     <!--</android.support.design.widget.AppBarLayout>-->
     <ScrollView
+        android:layout_weight="10"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="0dp">
 
         <LinearLayout
             android:id="@+id/llcards"
@@ -60,13 +61,15 @@
 
             <ImageView
                 android:id="@+id/iconThirio"
-                android:layout_width="70dp"
-                android:layout_height="70dp"
+                android:src="@drawable/thiriologotext"
                 android:layout_gravity="center_horizontal"
-                android:backgroundTint="@color/colorPrimary" />
+                android:layout_height="wrap_content"
+                android:layout_width="match_parent"
+                />
             <!--app:hintTextAppearance="@style/HintTextAppearance"-->
 
             <TextView
+                android:visibility="gone"
                 android:id="@+id/sexTextView"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -74,6 +77,7 @@
 
             <com.jaredrummler.materialspinner.MaterialSpinner
                 android:id="@+id/spinnerSex"
+                android:visibility="gone"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textColor="#000"
@@ -200,59 +204,59 @@
         </LinearLayout>
     </android.support.v7.widget.CardView>
             <!--</ScrollView>-->
-            <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
-                xmlns:card_view="http://schemas.android.com/apk/res-auto"
-                android:id="@+id/card_view_bmi"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_below="@+id/card_view_calc"
-                android:layout_gravity="center"
 
-                android:layout_marginLeft="4dp"
-
-                android:layout_marginRight="4dp"
-                android:layout_marginTop="16dp"
-                android:gravity="center"
-                android:transitionName="@string/transition_image"
-                card_view:cardBackgroundColor="@color/colorPrimary"
-                card_view:cardCornerRadius="16dp"
-                card_view:cardElevation="3dp"
-                card_view:contentPadding="16dp">
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="vertical">
-
-                    <TextView
-                        android:id="@+id/textViewBMI"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="BMI --.--"
-                        android:textAllCaps="true"
-                        android:textColor="#fff"
-                        android:textSize="20sp" />
-
-                    <TextView
-                        android:id="@+id/textViewCal"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-
-                        android:text="Calorie/day ----"
-                        android:textAllCaps="true"
-                        android:textColor="#fff"
-                        android:textSize="20sp" />
-        </LinearLayout>
-    </android.support.v7.widget.CardView>
         </LinearLayout>
     </ScrollView>
+    <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:card_view="http://schemas.android.com/apk/res-auto"
+        android:id="@+id/card_view_bmi"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1.5"
+        android:layout_below="@+id/card_view_calc"
 
+        android:layout_marginLeft="4dp"
+
+        android:layout_marginRight="4dp"
+        android:layout_marginTop="16dp"
+        android:transitionName="@string/transition_image"
+        card_view:cardBackgroundColor="@color/colorPrimary"
+        card_view:cardCornerRadius="16dp"
+        card_view:cardElevation="3dp"
+        card_view:contentPadding="16dp">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+
+            <TextView
+                android:id="@+id/textViewBMI"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="BMI --.--"
+                android:textAllCaps="true"
+                android:textColor="#fff"
+                android:textSize="20sp" />
+
+            <TextView
+                android:id="@+id/textViewCal"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+
+                android:text="Calorie/day ----"
+                android:textAllCaps="true"
+                android:textColor="#fff"
+                android:textSize="20sp" />
+        </LinearLayout>
+    </android.support.v7.widget.CardView>
     <TextView
         android:id="@+id/proceed"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
+        android:layout_weight="1"
         android:layout_alignParentBottom="true"
-        android:layout_margin="0dp"
+        android:layout_marginTop="8dp"
         android:background="@color/colorPrimaryDark"
         android:elevation="16dp"
         android:gravity="center_horizontal"
@@ -260,5 +264,5 @@
         android:text="PROCEED TO ORDER"
         android:textColor="#fff"
         android:textSize="16sp"
-        android:textStyle="bold"></TextView>
-</RelativeLayout>
+        android:textStyle="bold"/>
+</LinearLayout>
