--- a/app/src/main/res/layout/activity_food_curation.xml
+++ b/app/src/main/res/layout/activity_food_curation.xml
@@ -1,3 +1,16 @@
+
+<com.mxn.soul.flowingdrawer_core.FlowingDrawer
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/drawerlayout"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:clipChildren="false"
+    android:clipToPadding="false"
+    app:edPosition="1"
+    app:edMenuSize="260dp"
+    app:edMenuBackground="#dddddd">
+
 <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
@@ -34,7 +47,8 @@
             card_view:contentPadding="8dp">
 
             <TextView
-            android:layout_width="match_parent"
+                android:id="@+id/textviewCalorie"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="2000 cal/day intake"
 
@@ -146,13 +160,36 @@
         <!--android:layout_height="2dp"-->
         <!--android:background="@color/colorPrimary"></LinearLayout>-->
 
-        <android.support.v7.widget.RecyclerView
-            android:id="@+id/recycler_view_food_item"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:foregroundGravity="center"
-            android:scrollbars="vertical" />
-    </LinearLayout>
+        <!--<android.support.v7.widget.RecyclerView-->
+        <!--android:id="@+id/recycler_view_food_item"-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="match_parent"-->
+        <!--android:foregroundGravity="center"-->
+        <!--android:scrollbars="vertical" />-->
+
+                  <FrameLayout
+                android:id="@+id/rootLayoutFC"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:animateLayoutChanges="true"
+                android:orientation="vertical">
+
+            </FrameLayout>
+
+        </LinearLayout>
 
 
 </android.support.v7.widget.CardView>
+
+<com.mxn.soul.flowingdrawer_core.FlowingMenuLayout
+android:id="@+id/menulayout"
+android:layout_width="match_parent"
+android:layout_height="match_parent">
+
+<FrameLayout
+    android:id="@+id/id_container_menu"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"/>
+
+</com.mxn.soul.flowingdrawer_core.FlowingMenuLayout>
+</com.mxn.soul.flowingdrawer_core.FlowingDrawer>
