--- a/app/src/main/res/layout/fragment_breakfast.xml
+++ b/app/src/main/res/layout/fragment_breakfast.xml
@@ -6,106 +6,195 @@
    >
 
     <!-- TODO: Update blank fragment layout -->
+    <!--<LinearLayout-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="match_parent"-->
+       <!--android:orientation="vertical">-->
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical">
-        <GridLayout
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="10"
-            android:columnCount="2"
-            android:rowCount="2">
-            <LinearLayout
-                android:id="@+id/first"
-                android:padding="4dp"
-                android:layout_marginRight="8dp"
-                android:layout_columnWeight="1"
-                android:orientation="vertical">
-                <ImageView
-                    android:layout_gravity="center"
-                    android:backgroundTint="#000"
-                    android:src="@drawable/sample1"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content" />
-                <TextView
-                    android:gravity="center"
+        android:padding="8dp"
+        android:orientation="horizontal">
 
-                    android:textColor="#000"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:text="Hello 123"/>
-            </LinearLayout>
-            <LinearLayout
-                android:padding="4dp"
-                android:orientation="vertical"
-                android:layout_columnWeight="1"
-                android:layout_marginLeft="8dp">
-                <ImageView
-                    android:layout_gravity="center"
-
-                    android:backgroundTint="#000"
-                    android:src="@drawable/sample1"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content" />
-                <TextView
-                    android:gravity="center"
-
-                    android:textColor="#000"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:text="Hello 1234"/>
-            </LinearLayout>
-            <LinearLayout
-                android:padding="4dp"
-                android:orientation="vertical"
-                android:layout_columnWeight="1"
-                android:layout_marginLeft="8dp">
-                <ImageView
-                    android:layout_gravity="center"
-
-                    android:backgroundTint="#000"
-                    android:src="@drawable/sample1"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content" />
-                <TextView
-                    android:gravity="center"
-
-                    android:textColor="#000"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:text="Hello 12345"/>
-            </LinearLayout>
-        </GridLayout>
         <LinearLayout
-            android:id="@+id/footer"
-            android:background="#000"
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="2"
-            android:layout_gravity="center"
-            android:orientation="horizontal">
-        <TextView
-            android:gravity="center"
-            android:textColor="#fff"
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:text="1000 Calorie "
-            android:layout_weight="1"/>
-            <TextView
-                android:gravity="center"
-                android:textColor="#fff"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:text="10g Protein "
-                android:layout_weight="1"/>
-            <TextView
-                android:gravity="center"
-                android:textColor="#fff"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:text="100g fat "
-                android:layout_weight="1"/>
+            android:layout_height="match_parent"
+            android:layout_weight="4"
+            android:orientation="vertical">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_weight="1"
+                android:orientation="horizontal">
+
+                <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+                    xmlns:app="http://schemas.android.com/apk/res-auto"
+                    xmlns:card_view="http://schemas.android.com/apk/res-auto"
+                    android:layout_margin="4dp"
+                    android:id="@+id/sides"
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    card_view:cardBackgroundColor="@color/colorPrimary"
+                    card_view:cardCornerRadius="30dp"
+                    card_view:cardElevation="3dp"
+                    card_view:contentPadding="15dp">
+
+                    <LinearLayout
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:gravity="center"
+                        android:orientation="vertical">
+
+                        <TextView
+                            style="?android:textAppearanceLarge"
+                            android:layout_width="wrap_content"
+
+                            android:layout_height="wrap_content"
+                            android:text="Sides"
+                            android:textColor="#fff" />
+
+                        <ImageView
+                            android:id="@+id/snacksImage"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:visibility="gone" />
+                    </LinearLayout>
+
+                </android.support.v7.widget.CardView>
+
+
+                <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+                    xmlns:app="http://schemas.android.com/apk/res-auto"
+                    xmlns:card_view="http://schemas.android.com/apk/res-auto"
+                    android:id="@+id/salad"
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_margin="4dp"
+                    android:layout_weight="1"
+                    card_view:cardBackgroundColor="@color/colorPrimary"
+                    card_view:cardCornerRadius="16dp"
+                    card_view:cardElevation="3dp"
+                    card_view:contentPadding="8dp">
+
+                    <LinearLayout
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:gravity="center"
+                        android:orientation="vertical">
+
+                        <TextView
+                            style="?android:textAppearanceLarge"
+                            android:layout_width="wrap_content"
+
+                            android:layout_height="wrap_content"
+                            android:text="Cutlery and Salad"
+                            android:textColor="#fff" />
+
+                        <ImageView
+                            android:id="@+id/saladImage"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:visibility="gone" />
+                    </LinearLayout>
+
+                </android.support.v7.widget.CardView>
+
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_weight="1"
+                android:orientation="horizontal">
+
+                <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+                    xmlns:app="http://schemas.android.com/apk/res-auto"
+                    xmlns:card_view="http://schemas.android.com/apk/res-auto"
+                    android:id="@+id/maincourse"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_margin="4dp"
+                    card_view:cardBackgroundColor="@color/colorPrimary"
+                    card_view:cardCornerRadius="30dp"
+                    card_view:cardElevation="3dp"
+                    card_view:contentPadding="15dp">
+
+                    <LinearLayout
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:gravity="center"
+                        android:orientation="vertical">
+
+                        <TextView
+                            style="?android:textAppearanceLarge"
+                            android:layout_width="wrap_content"
+
+                            android:layout_height="wrap_content"
+                            android:text="Main Course"
+                            android:textColor="#fff" />
+
+                        <ImageView
+                            android:id="@+id/maincourseImage"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:visibility="gone" />
+                    </LinearLayout>
+
+                </android.support.v7.widget.CardView>
+
+
+            </LinearLayout>
+
+
         </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="0dp"
+        android:layout_height="match_parent"
+        android:layout_weight="1"
+        android:orientation="vertical">
+        <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+            xmlns:app="http://schemas.android.com/apk/res-auto"
+            xmlns:card_view="http://schemas.android.com/apk/res-auto"
+            android:id="@+id/breads"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_margin="4dp"
+
+            card_view:cardBackgroundColor="@color/colorPrimary"
+            card_view:cardCornerRadius="16dp"
+            card_view:cardElevation="3dp"
+            card_view:contentPadding="8dp">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_gravity="center"
+                android:gravity="center"
+                android:orientation="vertical">
+
+                <TextView
+                    style="?android:textAppearanceLarge"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="B\nr\ne\na\nd\ns"
+                    android:textAllCaps="true"
+                    android:textColor="#fff" />
+
+                <ImageView
+                    android:id="@+id/breadsImage"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:visibility="gone" />
+            </LinearLayout>
+
+        </android.support.v7.widget.CardView>
+    </LinearLayout>
     </LinearLayout>
 </FrameLayout>
