--- a/app/src/main/res/layout/fragment_menu.xml
+++ b/app/src/main/res/layout/fragment_menu.xml
@@ -3,7 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#fff"
-    tools:context="com.thirio.android.fragments.MenuFragment">
+    tools:context="com.thirio.android.fragments.SideMenu.MenuFragment">
 
     <!-- TODO: Update blank fragment layout -->
     <LinearLayout
@@ -30,12 +30,16 @@
             android:layout_width="2dp"
             android:layout_height="match_parent"
             android:layout_alignParentRight="true"
-            android:background="@color/colorPrimary"></View>
+            android:background="@color/colorPrimary"/>
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_marginRight="2dp"
             android:background="#fff"
             android:layout_height="match_parent">
+            <android.support.v7.widget.RecyclerView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/recycler_view_menu"/>
 
         </LinearLayout>
     </RelativeLayout>
