--- a/app/src/main/res/layout/activity_confirm_order.xml
+++ b/app/src/main/res/layout/activity_confirm_order.xml
@@ -1,71 +1,86 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:orientation="vertical"
     android:id="@+id/rootConfirm"
-    android:layout_height="match_parent"
-    tools:context="com.thirio.android.Activities.ConfirmOrder">
-<ScrollView
     android:layout_width="match_parent"
-    android:layout_height="0dp"
-    android:layout_weight="10">
+    android:layout_height="match_parent"
+    android:orientation="vertical"
+    tools:context="com.thirio.android.Activities.ConfirmOrder">
+    <ScrollView
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+        app:layout_constraintStart_toStartOf="parent"
+    app:layout_constraintHorizontal_bias="0.0"
+    app:layout_constraintLeft_toLeftOf="parent"
+    app:layout_constraintRight_toRightOf="parent">
     <LinearLayout
-         android:layout_width="match_parent"
-         android:layout_height="match_parent"
-         android:orientation="vertical">
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:orientation="vertical">
+
         <android.support.v7.widget.RecyclerView
+            android:id="@+id/recycler_view_orders"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:id="@+id/recycler_view_orders"/>
+            android:layout_height="wrap_content" />
     </LinearLayout>
-</ScrollView>
+    </ScrollView>
+
     <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         xmlns:card_view="http://schemas.android.com/apk/res-auto"
-        android:id="@+id/confirm"
+        android:id="@+id/pay"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1"
-        android:layout_marginTop="8dp"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="72dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintLeft_toLeftOf="parent"
 
+        app:layout_constraintRight_toRightOf="parent"
         card_view:cardBackgroundColor="@color/colorPrimaryDark"
         card_view:cardCornerRadius="16dp"
         card_view:cardElevation="3dp"
-        card_view:contentPadding="8dp">
+        card_view:contentPadding="16dp">
+
+
         <TextView
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:background="@color/colorPrimaryDark"
-            android:elevation="16dp"
+            android:elevation="18dp"
             android:gravity="center"
             android:text="PAY"
             android:textColor="#fff"
-            android:textSize="20sp"
-            android:textStyle="bold"/>
+            android:textStyle="bold" />
     </android.support.v7.widget.CardView>
+
     <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         xmlns:card_view="http://schemas.android.com/apk/res-auto"
-        android:id="@+id/proceed"
+        android:id="@+id/moreOrders"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1"
+        android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
+        android:layout_marginBottom="16dp"
 
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
         card_view:cardBackgroundColor="@android:color/holo_green_dark"
         card_view:cardCornerRadius="16dp"
         card_view:cardElevation="3dp"
-        card_view:contentPadding="8dp">
+        card_view:contentPadding="16dp">
         <TextView
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:elevation="16dp"
+            android:layout_height="wrap_content"
+            android:elevation="18dp"
+
             android:gravity="center"
             android:text="ORDER FOR OTHERS"
             android:textColor="#fff"
-            android:textSize="20sp"
-            android:textStyle="bold"/>
+            android:textStyle="bold" />
     </android.support.v7.widget.CardView>
-</LinearLayout>
+
+
+</android.support.constraint.ConstraintLayout>
